# snippet-extractor

./: LICENSE  snippet-extractor.cabal
examples/: Foo.thy  Multisnippet.hs  foo.c
src/: Main.hs
